--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,22 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: Roboto;
 }
 
+
 .header img {
+  margin: 16px;
   height: 80px;
 }
+
+@media (max-width: 600px) {
+  .header img {
+    margin: 8px;
+    height: 60px;
+  }
+}
+
 
 
 code {
@@ -61,9 +72,8 @@ body.home {
 
 .header {
   /*background: #44332d;*/
-  padding-top: 18px;
-  padding-bottom: 12px;
-  text-align: center;
+ 
+  /* text-align: center; */
   background-image: url("./components/img/background-header.jpg");
   font-size: 12pt;
 }
@@ -200,11 +210,6 @@ body.x-hide-overflow {
 hr {
   border-top: solid 1px #aaa;
   border-bottom: solid 1px #fff7f7;
-}
-
-* {
-  /* font-family: 'Exo 2', sans-serif; */
-  font-weight: 600;
 }
 
 .result-time, .time-countdown, .time-final, .result-place {
