Can add, edit, and delete cars and their images

--- a/src/index.css
+++ b/src/index.css
@@ -748,6 +748,13 @@ div.standing-time {
   display: inline-block;
 }
 
-.AdvancedContent     {
+.AdvancedContent {
   margin: 8px;
+}
+
+.inputfile  {
+    display: none;
+}
+
+.inputFileLabel{
 }
